Not sure why its not working looks like double checked everything

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,43 +2,45 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Restaruant Tracker</title>
+    <title>Restaurant Tracker</title>
 </head>
 <body>
-<form action="/logout" method="get">
+{{#username}}
+<form action="/logout" method="post">
     <button type="submit">Logout</button>
 </form>
 <br>
 
 <form action="/" method="get">
-    <input type="text" name="search" placeholder="Search location"/>
+    <input type="text" username="search" placeholder="Search location"/>
     <button type="submit">Search</button>
 </form>
 
 <form action="/create-restaurant" method="post">
-    <input type="text" name="name" placeholder="Name"/>
-    <input type="text" name="loc" placeholder="Location"/>
-    <select name="rating">
+    <input type="text" username="username" placeholder="Name"/>
+    <input type="text" username="location" placeholder="Location"/>
+    <select username="rating">
         <option value="1">1</option>
         <option value="2">2</option>
         <option value="3">3</option>
         <option value="4">4</option>
         <option value="5">5</option>
     </select>
-    <input type="text" name="comment" placeholder="Comment"/>
+    <input type="text" username="comment" placeholder="Comment"/>
     <button type="submit">Submit Restaurant</button>
 </form>
 <br>
 <br>
 <ol>
     {{#restaurants}}
-    <li><b>{{name}}</b> - {{location}} - {{rating}}/5 - {{comment}}
+    <li><b>{{username}}</b> - {{location}} - {{rating}}/5 - {{comment}}
         <form action="/delete-restaurant" method="post" style="display: inline-block">
-            <input type="hidden" name="id" value="{{id}}"/>
+            <input type="hidden" username="id" value="{{id}}"/>
             <button type="submit">Delete Restaurant</button>
         </form>
     </li>
     {{/restaurants}}
 </ol>
+{{/username}}
 </body>
 </html>
