--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,10 +5,12 @@
     <title>Restaurant Tracker</title>
 </head>
 <body>
+{{^username}}
 <form action="/login" method="post">
-    <input type="text" name="name" placeholder="Username"/>
-    <input type="password" name="password" placeholder="Password"/>
+    <input type="text" username="username" placeholder="Username"/>
+    <input type="password" username="password" placeholder="Password"/>
     <button type="submit">Login</button>
 </form>
+{{/username}}
 </body>
 </html>
