--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,8 +7,8 @@
 <body>
 {{^username}}
 <form action="/login" method="post">
-    <input type="text" username="username" placeholder="Username"/>
-    <input type="password" username="password" placeholder="Password"/>
+    <input type="text" name="username" placeholder="Username"/>
+    <input type="password" name="password" placeholder="Password"/>
     <button type="submit">Login</button>
 </form>
 {{/username}}
