--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,21 +12,21 @@
 <br>
 
 <form action="/" method="get">
-    <input type="text" username="search" placeholder="Search location"/>
+    <input type="text" name="search" placeholder="Search location"/>
     <button type="submit">Search</button>
 </form>
 
 <form action="/create-restaurant" method="post">
-    <input type="text" username="username" placeholder="Name"/>
-    <input type="text" username="location" placeholder="Location"/>
-    <select username="rating">
+    <input type="text" name="name" placeholder="Name"/>
+    <input type="text" name="location" placeholder="Location"/>
+    <select name="rating">
         <option value="1">1</option>
         <option value="2">2</option>
         <option value="3">3</option>
         <option value="4">4</option>
         <option value="5">5</option>
     </select>
-    <input type="text" username="comment" placeholder="Comment"/>
+    <input type="text" name="comment" placeholder="Comment"/>
     <button type="submit">Submit Restaurant</button>
 </form>
 <br>
@@ -35,7 +35,7 @@
     {{#restaurants}}
     <li><b>{{username}}</b> - {{location}} - {{rating}}/5 - {{comment}}
         <form action="/delete-restaurant" method="post" style="display: inline-block">
-            <input type="hidden" username="id" value="{{id}}"/>
+            <input type="hidden" name="id" value="{{id}}"/>
             <button type="submit">Delete Restaurant</button>
         </form>
     </li>
